# ddd-fastapi

./: .gitignore  MONOLITO_MODULAR.md  docker_compose.yml  endpoint.http  pyproject.toml  seed.sql
app/: domain_exception.py  main.py
app/authentication/: __init__.py  _auth.py  _create_token.py  _get_user_profile.py  _register_user.py  _user.py  _user_repository.py  get_email_from_token.py  query_user_by_email.py  route.py
app/infra/: database.py
app/movement/: __init__.py  route.py
app/movement/bank/: _bank_account.py  _bank_account_repository.py  _register_bank_account.py
app/subscription/: __init__.py  query_user_plan.py  route.py
app/subscription/plan/: _plan.py  _plan_repository.py
app/subscription/user/: _get_user.py  _select_plan.py  _user.py  _user_plan.py  _user_repository.py
